fix: enhance scrollbar styling and improve layout in ShadowCodePreview component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,7 +122,7 @@
 }
 
 ::-webkit-scrollbar {
-  @apply w-1.5;
+  @apply h-1.5 w-1.5;
 }
 
 /* Track */
@@ -133,6 +133,7 @@
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #afafaf;
+  border-radius: 5px;
 }
 
 /* Handle on hover */
